--- a/notetab.html
+++ b/notetab.html
@@ -1,5 +1,12 @@
 <html>
-<head><title>NoteTab</title></head>
+<head>
+<title>NoteTab</title>
+<link rel="icon"
+ href="data:image/svg+xml,
+  <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'>
+  <text y='14px' font-size='16px'>🗒️</text></svg>"
+ type="image/svg+xml" />
+</head>
 <body contenteditable autofocus
  style="font-size: large; font-family: monospace;"
  onload="document.body.innerHTML = localStorage.getItem('NoteTab')"
