--- a/notetab.html
+++ b/notetab.html
@@ -1,11 +1,9 @@
 <html>
 <head>
 <title>NoteTab</title>
-<link rel="icon"
- href="data:image/svg+xml,
-  <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'>
-  <text y='14px' font-size='16px'>🗒️</text></svg>"
- type="image/svg+xml" />
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,
+ <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'>
+ <text y='14px' font-size='16px'>🗒️</text></svg>" />
 </head>
 <body contenteditable autofocus
  style="font-size: large; font-family: monospace;"
